test/tests/compiler/18_structures/invalid_parse/extra_credit/union_var_bad_tag.plx
pub fn main(none) i32 {
    foo: union 4;  # a union tag must be an identifier (not a constant)
    return 0
}
